# zkevm-specs

./: .gitignore  CODEOWNERS  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
specs/: bn256-proof.md  bytecode-proof.md  copy-proof.md  ecc-proof.md  evm-proof.md  exp-proof-design-doc.md  exp-proof.md  exponentiation-circuit.md  introduction.md  invalid-tx-proof.md  lookup.md  mpt-proof.md  public_inputs.md  sig-proof.md  stack_ops.md  state-proof.md  super_circuit.md  tables.md  transactions-proof.md  withdrawal-proof.md  word-encoding.md
specs/error_state/: ErrorAddressCollision.md  ErrorCodeStore.md  ErrorDepth.md  ErrorGasUintOverflow.md  ErrorInsufficientBalance.md  ErrorInvalidCreationCode.md  ErrorInvalidJump.md  ErrorInvalidOpcode.md  ErrorOutOfGasAccountAccess.md  ErrorOutOfGasCall.md  ErrorOutOfGasConstant.md  ErrorOutOfGasCreate.md  ErrorOutOfGasDynamicMemoryExpansion.md  ErrorOutOfGasEXP.md  ErrorOutOfGasLog.md  ErrorOutOfGasMemoryCopy.md  ErrorOutOfGasSHA3.md  ErrorOutOfGasSloadSstore.md  ErrorOutOfGasStaticMemoryExpansion.md  ErrorOutOfGasTloadTstore.md  ErrorReturnDataOutOfBound.md  ErrorStackOverflow_Underflow.md  ErrorUintOverflow.md  ErrorWriteProtection.md  error_invalid_jump.md  error_return_data_out_of_bound.md  error_write_protection.md
specs/keccak256/: permutation.md  variable-length-input.md
specs/mpt/: account-leaf.md  branch.md  extension-branch.md  extension-node.md  extension.md  gadgets.md  helpers.md  how-to-use.md  main.md  mod_extension.md  mpt-proof-old.md  mpt-proof.md  proof_chain.md  scope.md  selectors.md  start.md  storage_leaf.md  visual.md
specs/opcode/: 00STOP.md  01ADD_03SUB.md  02MUL.md  02MUL_04DIV_06MOD.md  02MUL_04DIV_06MOD_1bSHL_1cSHR.md  05SDIV_07SMOD.md  08ADDMOD.md  09MULMOD.md  0AEXP.md  0bSIGNEXTEND.md  0x80_dupx.md  0x90_swapx.md  10LT_11GT.md  10LT_11GT_14EQ.md  12SLT_13SGT.md  15ISZERO.md  16AND.md  16AND_17OR_18XOR.md  17OR.md  18XOR.md  19NOT.md  1aBYTE.md  1bSHL.md  1bSHL_1cSHR.md  1cSHR.md  1cSHR_1dSAR.md  1dSAR.md  26BYTE.md  30ADDRESS.md  31BALANCE.md  32ORIGIN.md  33CALLER.md  34CALLVALUE.md  35CALLDATALOAD.md  36CALLDATASIZE.md  37CALLDATACOPY.md  (+41 more)
tests/: common.py  conftest.py  test_add.py  test_add_sub.py  test_autil.py  test_bitwise.py  test_byte.py  test_bytecode_circuit.py  test_ecc_circuit.py  test_encoding.py  test_lt_gt.py  test_memory.py  test_msize.py  test_mul.py  test_opcode.py  test_pop.py  test_public_inputs.py  test_shr.py  test_shr_sar.py  test_sig_circuit.py  test_signextend.py  test_slt_sgt.py  test_stack.py  test_state_circuit.py  test_storage.py  test_tx_circuit.py  test_util.py  test_withdrawal_circuit.py
zkevm_specs/: tx.py
(+405 files in other folders)
