[metadata]
name = zkevm-specs
version = 0.0.1
author = zkevm-team
description = Zkevm specifications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/appliedzkp/zkevm-specs/
project_urls =
    Bug Tracker = https://github.com/appliedzkp/zkevm-specs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pycryptodome==3.11.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

[flake8]
max-line-length = 120
