[metadata]
name = zkevm-specs
version = 0.0.1
author = zkevm-team
description = Zkevm specifications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/privacy-scaling-explorations/zkevm-specs/
project_urls =
    Bug Tracker = https://github.com/privacy-scaling-explorations/zkevm-specs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pycryptodome==3.14.1
    py-ecc==6.0.0
    eth-keys==0.4.0
    rlp==3.0.0
    eth-utils==2.0.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 7.0.0
lint =
    black >= 22.3.0
    mypy >= 0.931
    flake8 >= 4.0.1

[flake8]
max-line-length = 100
select = F401
per-file-ignores =
    # imported but unused
    __init__.py: F401

[mypy]
exclude = ['build']
ignore_missing_imports = true
